--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
       content="A simple real time chat"
     />
     <title>Real Time Chat</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app. :(</noscript>
